Co-authored-by: springlink1 <springlink1@users.noreply.github.com> 新写了ws_和加了些TT电机,不过现在文件有误

--- a/main/index.html
+++ b/main/index.html
@@ -339,7 +339,8 @@
                     Mqtt_pass: document.getElementById('mqtt-pass').value,
                     device_serial: document.getElementById('device-serial').value
                 }
-            }; ws.send(JSON.stringify(doc));
+            }; 
+            ws.send(JSON.stringify(doc));
             showTab('main-panel')
         }
 
